--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   misskey-telegram-forwarder:
-    image: laoliu233/misskey-telegram-forwarder:latest
+    image: hpilosit/misskey2tg:latest
     # build: .
     env_file:
       - ".env"
